--- a/Tyumen22.html
+++ b/Tyumen22.html
@@ -98,6 +98,18 @@
       </section>
     </div>
   </div>
+  <div class="wrapper-menu">
+    <img src="img/grettings/close.svg" alt="close" class="wrapper-menu-close" />
+    <ul class="menu">
+      <li class="menu__item"><a id="m__item" href="#main-sec">Главная</a></li>
+      <li class="menu__item"><a id="m__item" href="#two-section">Почему стоит выбрать нас?</a></li>
+      <li class="menu__item"><a id="m__item" href="#sec3">Контакты</a></li>
+      <li class="menu__item"><a id="m__item" href="404.html">Купить</a></li>
+      <li class="menu__item"><a id="m__item" href="School-search.html">Выбрать школу</a></li>
+    </ul>
+  </div>
+
+  <script src="js/menu.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
 
   <script src="Tyumen22.js"></script>
