--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="desc__text">
               Для аудиторий образовательных учреждений
             </div>
-            <a href="#">
+            <a href="School-search.html">
               <div class="test">
                 <p class="test__link">
                   Выбрать школу<img class="arrow2" src="img/grettings/str2.svg" alt="str2" />
@@ -123,7 +123,7 @@
               <a href="#two-section">Почему стоит выбрать нас</a>
               <a href="#sec3">Контакты</a>
               <a href="404.html">Купить</a>
-              <a href="#">Выбрать школу</a>
+              <a href="School-search.html">Выбрать школу</a>
             </div>
             <div class="info-2block__email-block">
               <p class="phone-number1 int" id="number1">+7 (904) 888-47-63</p>
@@ -155,7 +155,7 @@
       <li class="menu__item"><a id="m__item" href="#two-section">Почему стоит выбрать нас?</a></li>
       <li class="menu__item"><a id="m__item" href="#sec3">Контакты</a></li>
       <li class="menu__item"><a id="m__item" href="404.html">Купить</a></li>
-      <li class="menu__item"><a id="m__item" href="#">Выбрать школу</a></li>
+      <li class="menu__item"><a id="m__item" href="School-search.html">Выбрать школу</a></li>
     </ul>
   </div>
 
