--- a/School-search.html
+++ b/School-search.html
@@ -29,7 +29,8 @@
       </div>
       <div class="header__btn-block">
         <a href="404.html" class="header__sign-up">Купить</a>
-        <a href="#" class="header__log-in"><img src="img/grettings/arrow1.svg" class="arrow" alt="arrow" />Выбрать
+        <a href="School-search.html" class="header__log-in"><img src="img/grettings/arrow1.svg" class="arrow"
+            alt="arrow" />Выбрать
           школу</a>
       </div>
 
@@ -74,6 +75,18 @@
       </section>
     </div>
   </div>
+  <div class="wrapper-menu">
+    <img src="img/grettings/close.svg" alt="close" class="wrapper-menu-close" />
+    <ul class="menu">
+      <li class="menu__item"><a id="m__item" href="#main-sec">Главная</a></li>
+      <li class="menu__item"><a id="m__item" href="#two-section">Почему стоит выбрать нас?</a></li>
+      <li class="menu__item"><a id="m__item" href="#sec3">Контакты</a></li>
+      <li class="menu__item"><a id="m__item" href="404.html">Купить</a></li>
+      <li class="menu__item"><a id="m__item" href="School-search.html">Выбрать школу</a></li>
+    </ul>
+  </div>
+
+  <script src="js/menu.js"></script>
   <script src="School-search.js"></script>
 </body>
 
