--- a/School-search.html
+++ b/School-search.html
@@ -24,7 +24,7 @@
       <div class="header__content">
         <!-- логотип -->
         <div class="logo">
-          <a href="#" class="logo__link"><img src="img/logo.svg" alt="logo" /></a>
+          <a href="index.html" class="logo__link"><img src="img/logo.svg" alt="logo" /></a>
         </div>
       </div>
       <div class="header__btn-block">
